Decreased small container size for readability Fixed title spacing on tablet sizes Fixed spacing on nav and between sections Fixed spacing of projects on work section

--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -7,7 +7,7 @@ $selection-color: #e0f1fe
 
 $quote-source-color: #858585
 
-$container-sm: 1024px
+$container-sm: 800px
 $container-m: 1200px
 
 $breakpoint-mobile-l: 426px
