--- a/assets/css/3-sections/_nav.sass
+++ b/assets/css/3-sections/_nav.sass
@@ -12,8 +12,7 @@ nav a
 @media only screen and (min-width: $breakpoint-tablet)
     nav
         justify-content: flex-end
-        margin: 0 auto
-        margin-bottom: 20px
+        margin: 20px auto 23px
 
     nav a
         margin-right: 20px
