--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -9,3 +9,7 @@ section
 @media only screen and (min-width: $breakpoint-mobile-l) and (max-width: $breakpoint-monitor-sm)
 	.container
 		padding: 0 20px
+
+@media only screen and (min-width: $breakpoint-monitor-sm)
+	section
+		margin-bottom: 140px
